--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <title>Complete Code Structure</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; margin: 0; padding: 0;" class="bg-black bg-gradient">
+<body style="height: 100vh; font-family: Arial, sans-serif; line-height: 1.6; color: #333; margin: 0; padding: 0;" class="bg-black bg-gradient">
 
     <header style="background-color: #333; color: #fff; padding: 20px 0; text-align: center;">
         <h1 style="margin: 0;">Check out the Folder Structure on Github</h1>
