--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,14 +15,17 @@
                     <a href="/" style="color: #fff; text-decoration: none;">Home</a>
                 </li>
                 <li style="display: inline; margin-right: 20px;">
-                    <a href="/aboutus" style="color: #fff; text-decoration: none;">About Us</a>
+                    <a href="/register" style="color: #fff; text-decoration: none;">Register</a>
                 </li>
                 <li style="display: inline; margin-right: 20px;">
                     <a href="/login" style="color: #fff; text-decoration: none;">Login</a>
+                </li>  <li style="display: inline; margin-right: 20px;">
+                    <a href="/secrets" style="color: #fff; text-decoration: none;">Secrets</a>
                 </li>
                 <li style="display: inline; margin-right: 20px;">
-                    <a href="/register" style="color: #fff; text-decoration: none;">Register</a>
+                    <a href="/aboutus" style="color: #fff; text-decoration: none;">About Us</a>
                 </li>
+               
             </ul>
         </nav>
     </header>
