added another route and unauthenticated middleware

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') %>
 
-<h1 style="color: white;">This is a protected Route</h1>
+<h1 style="color:white">this route is only accessable if you are authenticated</h1>
+<a href="/logout" class="btn btn-primary">Logout</a>
 
 <%- include('partials/footer') %>
