--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,6 @@
         <h1 style="margin: 0;">Check out the Folder Structure on Github</h1>
         <nav>
             <ul style="list-style: none; ">
-               <%= console.log(isLoggedIn) %>
                      <li style="display: inline; margin-right: 20px;">
                       <a href="/" style="color: #fff; text-decoration: none;">Home</a>
                      </li>
@@ -19,7 +18,6 @@
                         <li style="display: inline; margin-right: 20px;">
                           <a href="/register" style="color: #fff; text-decoration: none;">Register</a>
                         </li>
-                      
                         <li style="display: inline; margin-right: 20px;"> 
                           <a href="/login" style="color: #fff; text-decoration: none;">Login</a> 
                         </li>
@@ -29,8 +27,11 @@
                      <li style="display: inline; margin-right: 20px;">
                        <a href="/aboutus" style="color: #fff; text-decoration: none;">About Us</a>
                      </li>
-
-
+                     <% if (isLoggedIn) { %>
+                      <li style="display: inline; margin-right: 20px;">
+                        <a href="/profile" style="color: #fff; text-decoration: none;">Profile</a>
+                      </li>
+                      <% } %>
             </ul>
         </nav>
     </header>
