--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,18 +1,73 @@
 <%- include('./partials/header') %>
 
-    <main style="max-width: 800px; margin: 20px auto; padding: 0 20px;">
-        <section style="margin-bottom: 30px;">
-            <h2>Featured Content</h2>
-            <p>This is where your main content would go.</p>
-        </section>
-        
-        <!-- You can add more sections or content here -->
-    </main>
-
+<main>
+    <ul class='slider'>
+      <li class='item' style="background-image: url('https://cdn.mos.cms.futurecdn.net/dP3N4qnEZ4tCTCLq59iysd.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Lossless Youths"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+          praesentium nisi. Id laboriosam ipsam enim.  </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://i.redd.it/tc0aqpv92pn21.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Estrange Bond"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+          praesentium nisi. Id laboriosam ipsam enim.  </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://wharferj.files.wordpress.com/2015/11/bio_north.jpg')">
+        <div class='content'>
+          <h2 class='title'>"The Gate Keeper"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+          praesentium nisi. Id laboriosam ipsam enim.  </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://images7.alphacoders.com/878/878663.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Last Trace Of Us"</h2>
+          <p class='description'>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
+          </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://theawesomer.com/photos/2017/07/simon_stalenhag_the_electric_state_6.jpg')">
+        <div class='content'>
+          <h2 class='title'>"Urban Decay"</h2>
+          <p class='description'>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore fuga voluptatum, iure corporis inventore praesentium nisi. Id laboriosam ipsam enim.
+          </p>
+          <button>Read More</button>
+        </div>
+      </li>
+      <li class='item' style="background-image: url('https://da.se/app/uploads/2015/09/simon-december1994.jpg')">
+        <div class='content'>
+          <h2 class='title'>"The Migration"</h2>
+          <p class='description'> Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Tempore fuga voluptatum, iure corporis inventore
+          praesentium nisi. Id laboriosam ipsam enim.  </p>
+          <button>Read More</button>
+        </div>
+      </li>
+    </ul>
+    <nav class='nav'>
+      <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
+      <ion-icon class='btn next' name="arrow-forward-outline"></ion-icon>
+    </nav>
+  </main>
+  
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <footer style="text-align: center; padding: 10px 0; background-color: #333; color: #fff; position: fixed; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
 
