remove git commit

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,10 +21,13 @@
                         </li>
                         <li style="display: inline; margin-right: 20px;"> 
                           <a href="/login" style="color: #fff; text-decoration: none;">Login</a> 
+                        </li>   
+                        <li style="display: inline; margin-right: 20px;"> 
+                          <a href="/auth/google" style="color: #fff; text-decoration: none;">Google Login</a> 
                         </li>
                       <% } %>
                      <a href="/secrets" style="color: #fff; text-decoration: none;">Secrets</a>
-                     </li> %>
+                     </> %>
                      <li style="display: inline; margin-right: 20px;">
                        <a href="/aboutus" style="color: #fff; text-decoration: none;">About Us</a>
                      </li>
